manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bn256-portfolio-service
spec:
  selector:
    app: bn256-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
