manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bn256-portfolio-ingress
spec:
  rules:
    - host: bn256.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bn256-portfolio-service
                port:
                  number: 80
  tls:
    - hosts:
        - bn256.dev
      secretName: bn256-portfolio-tls-secret
